--- a/build.gradle
+++ b/build.gradle
@@ -29,4 +29,7 @@ dependencies {
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
     compile('org.projectlombok:lombok')
+
+
+    compile('org.springframework.boot:spring-boot-starter-aop')
 }
