--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,11 @@ repositories {
 }
 
 dependencies {
+ 
+    testCompile('org.junit.jupiter:junit-jupiter:5.6.0')
+    testCompile('org.assertj:assertj-core:3.15.0')
+
+    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
     compile('org.springframework.boot:spring-boot-starter-web')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
